Fix icons on IE11

--- a/src/header/searchBar/searchBar.scss
+++ b/src/header/searchBar/searchBar.scss
@@ -18,6 +18,7 @@
   .mwz-menu, .mwz-directions {
     img {
       width: 25px;
+      height: 25px;
     }
     
     button {
